# app/Models/ChatMessage.php
@@ -6,6 +6,7 @@ use App\Enums\ChatMessageRole;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
 class ChatMessage extends Model
@@ -42,5 +43,10 @@ class ChatMessage extends Model
     public function report(): BelongsTo
     {
         return $this->belongsTo(MedicalReport::class, 'report_id');
+    }
+
+    public function attachments(): HasMany
+    {
+        return $this->hasMany(ChatAttachment::class, 'chat_message_id');
     }
 }
